Drop roave/no-floaters (requires PHP 7.2)

--- a/tests/config/phpstan.neon
+++ b/tests/config/phpstan.neon
@@ -22,4 +22,4 @@ includes:
 	- ../../vendor/phpstan/phpstan-deprecation-rules/rules.neon
 	- ../../vendor/phpstan/phpstan-strict-rules/rules.neon
 	- ../../vendor/thecodingmachine/phpstan-safe-rule/phpstan-safe-rule.neon
-	- ../../vendor/roave/no-floaters/rules.neon
+	#- ../../vendor/roave/no-floaters/rules.neon # enable me in future (PHP 7.2 and later)
