--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ install:
 
 script:
   # Tests
-  - composer run-script tests
+  - vendor/bin/tester -s -p php --colors 1 ./tests/cases
 
 after_failure:
   # Print *.actual content
