--- a/composer.json
+++ b/composer.json
@@ -26,15 +26,11 @@
 		"nette/utils": "^2.4 || ^3.0",
 		"guzzlehttp/guzzle": "^6.3",
 		"composer/ca-bundle": "^1.0",
-		"trejjam/base-extension": "^0.8"
+		"trejjam/base-extension": "^0.8",
+		"thecodingmachine/safe": "^0.1.14"
 	},
 	"require-dev": {
 		"nette/tester": "^2.2",
-
-		"phpstan/phpstan": "^0.11",
-		"phpstan/phpstan-deprecation-rules": "^0.11",
-		"phpstan/phpstan-strict-rules": "^0.11",
-		"thecodingmachine/phpstan-safe-rule": "^0.1",
 
 		"symplify/easy-coding-standard": "^5.0",
 
@@ -53,6 +49,19 @@
 		"psr-4": {
 			"Trejjam\\Ares\\Tests\\": "tests/src/"
 		}
+	},
+	"scripts": {
+		"phpstan-install": [
+			"mkdir -p temp/phpstan",
+			"composer require -d temp/phpstan phpstan/phpstan:0.11",
+			"composer require -d temp/phpstan phpstan/phpstan-deprecation-rules:0.11",
+			"composer require -d temp/phpstan phpstan/phpstan-strict-rules:0.11",
+			"composer require -d temp/phpstan thecodingmachine/phpstan-safe-rule:0.1.3",
+			"composer require -d temp/phpstan roave/no-floaters:1.1.0"
+		],
+		"phpstan": [
+			"temp/phpstan/vendor/bin/phpstan analyse -l max -c tests/config/phpstan.neon src tests/src tests/cases"
+		]
 	},
 	"extra": {
 		"branch-alias": {
