--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,24 @@ jobs:
         - travis_retry composer update --no-progress --prefer-dist --prefer-lowest
       script:
         - vendor/bin/tester -s -p php --colors 1 ./tests/cases
+    - env: title="Bleeding edge dependencies 7.3"
+      allow_failures: true
+      php: 7.3
+      install:
+        - composer config minimum-stability RC
+        - travis_retry composer remove -n --dev symplify/easy-coding-standard
+        - travis_retry composer require nette/di:^3.0
+        - travis_retry composer update --no-progress --prefer-dist
+
+        - mkdir -p temp/phpstan
+        - composer init -d temp/phpstan -n
+        - composer config  -d temp/phpstan minimum-stability RC
+        - travis_retry composer require -d temp/phpstan nette/di:^3.0
+        - travis_retry composer run-script phpstan-install
+      script:
+        - vendor/bin/tester -s -p php --colors 1 ./tests/cases
+
+        - composer run-script -- phpstan -c phpstan.nette3.0.neon
 
     - stage: Quality Assurance
       php: 7.1
