--- a/.travis.yml
+++ b/.travis.yml
@@ -45,7 +45,7 @@ jobs:
       script:
         - vendor/bin/tester -s -p php --colors 1 ./tests/cases
 
-        - composer run-script -- phpstan -c phpstan.nette3.0.neon
+        - composer run-script phpstan
 
     - stage: Quality Assurance
       php: 7.1
