--- a/tests/config/phpstan.neon
+++ b/tests/config/phpstan.neon
@@ -10,9 +10,6 @@ parameters:
 			message: "~^Call to function method_exists\\(\\) with 'Trejjam…' and 'getConfigSchema' will always evaluate to false.$~"
 			path: %currentWorkingDirectory%/src/DI/AresExtension.php
 		- # pre Nette 3.0 compatibility
-			message: "~^Call to function method_exists\\(\\) with \\$this\\(Trejjam\\\\Ares\\\\DI\\\\AresExtension\\) and 'loadDefinitionsFrom…' will always evaluate to true.$~"
-			path: %currentWorkingDirectory%/src/DI/AresExtension.php
-		- # pre Nette 3.0 compatibility
 			message: ~^Cannot access offset '.*' on Trejjam\\Ares\\DI\\ExtensionConfiguration\.$~
 			path: %currentWorkingDirectory%/src/DI/AresExtension.php
 		- # pre Nette 3.0 compatibility
@@ -22,13 +19,13 @@ parameters:
 			message: ~^Casting to Trejjam\\Ares\\DI\\HttpClientConfiguration something that's already Trejjam\\Ares\\DI\\HttpClientConfiguration\.$~
 			path: %currentWorkingDirectory%/src/DI/AresExtension.php
 		- # pre Nette 3.0 compatibility
-			message: '~^Call to deprecated method loadDefinition\(\) of class Nette\\DI\\Compiler\.$~'
-			path: %currentWorkingDirectory%/src/DI/AresExtension.php
-		- # pre Nette 3.0 compatibility
-			message: '~^Static method Nette\\DI\\Compiler::loadDefinition\(\) invoked with 2 parameters, 0 required\.$~'
-			path: %currentWorkingDirectory%/src/DI/AresExtension.php
-		- # pre Nette 3.0 compatibility
 			message: '~^Property Trejjam\\Ares\\DI\\AresExtension::\$config \(Trejjam\\Ares\\DI\\ExtensionConfiguration\) does not accept array\.$~'
+			path: %currentWorkingDirectory%/src/DI/AresExtension.php
+		- # pre Nette 3.0 compatibility
+			message: '~^Call to static method from\(\) on an unknown class Nette\\DI\\Config\\Expect\.$~'
+			path: %currentWorkingDirectory%/src/DI/AresExtension.php
+		- # pre Nette 3.0 compatibility
+			message: '~^Return typehint of method Trejjam\\Ares\\DI\\AresExtension::getConfigSchema\(\) has invalid type Nette\\DI\\Config\\Schema\.$~'
 			path: %currentWorkingDirectory%/src/DI/AresExtension.php
 
 
