--- a/tests/config/phpstan.neon
+++ b/tests/config/phpstan.neon
@@ -6,28 +6,9 @@ parameters:
 			message: '~^Method Trejjam\\Ares\\IMapper::map\(\) has no return typehint specified\.$~'
 			path: %currentWorkingDirectory%/src/IMapper.php
 
-		- # pre Nette 3.0 compatibility
-			message: "~^Call to function method_exists\\(\\) with 'Trejjam…' and 'getConfigSchema' will always evaluate to false.$~"
+		-
+			message: "~^Call to function method_exists\\(\\) with 'Composer\\\\\\\\CaBundle…' and 'getSystemCaRootBund…' will always evaluate to false\\.$~"
 			path: %currentWorkingDirectory%/src/DI/AresExtension.php
-		- # pre Nette 3.0 compatibility
-			message: ~^Cannot access offset '.*' on Trejjam\\Ares\\DI\\ExtensionConfiguration\.$~
-			path: %currentWorkingDirectory%/src/DI/AresExtension.php
-		- # pre Nette 3.0 compatibility
-			message: ~^Casting to Trejjam\\Ares\\DI\\ExtensionConfiguration something that's already Trejjam\\Ares\\DI\\ExtensionConfiguration\.$~
-			path: %currentWorkingDirectory%/src/DI/AresExtension.php
-		- # pre Nette 3.0 compatibility
-			message: ~^Casting to Trejjam\\Ares\\DI\\HttpClientConfiguration something that's already Trejjam\\Ares\\DI\\HttpClientConfiguration\.$~
-			path: %currentWorkingDirectory%/src/DI/AresExtension.php
-		- # pre Nette 3.0 compatibility
-			message: '~^Property Trejjam\\Ares\\DI\\AresExtension::\$config \(Trejjam\\Ares\\DI\\ExtensionConfiguration\) does not accept array\.$~'
-			path: %currentWorkingDirectory%/src/DI/AresExtension.php
-		- # pre Nette 3.0 compatibility
-			message: '~^Call to static method from\(\) on an unknown class Nette\\Schema\\Expect\.$~'
-			path: %currentWorkingDirectory%/src/DI/AresExtension.php
-		- # pre Nette 3.0 compatibility
-			message: '~^Return typehint of method Trejjam\\Ares\\DI\\AresExtension::getConfigSchema\(\) has invalid type Nette\\DI\\Config\\Schema\.$~'
-			path: %currentWorkingDirectory%/src/DI/AresExtension.php
-
 
 	earlyTerminatingMethodCalls:
 		Nette\Application\UI\Presenter:
