--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
 		"issues": "https://gitlab.trem.in/trejjam/ares/issues"
 	},
 	"require": {
-		"php": ">=7.1",
+		"php": ">=7.2",
 
 		"ext-simplexml": "^7.1",
 
@@ -25,7 +25,7 @@
 		"nette/http": "^3.0",
 		"nette/utils": "^3.0",
 		"guzzlehttp/guzzle": "^6.3",
-		"thecodingmachine/safe": "^0.1.14"
+		"thecodingmachine/safe": "^1.0"
 	},
 	"require-dev": {
 		"nette/tester": "^2.2",
@@ -33,9 +33,15 @@
 		"composer/ca-bundle": "^1.1",
 		"paragonie/certainty": "^2.6",
 
-		"symplify/easy-coding-standard": "^6.1",
+		"phpstan/phpstan": "^0.12",
+		"phpstan/phpstan-deprecation-rules": "^0.12",
+		"phpstan/phpstan-strict-rules": "^0.12",
+		"thecodingmachine/phpstan-safe-rule": "^1",
+		"roave/no-floaters": "^1.1.0",
 
-		"sensiolabs/security-checker": "^5.0",
+		"symplify/easy-coding-standard": "^7.2",
+
+		"sensiolabs/security-checker": "^6.0",
 		"roave/security-advisories": "dev-master"
 	},
 	"suggest": {
@@ -55,16 +61,8 @@
 		}
 	},
 	"scripts": {
-		"phpstan-install": [
-			"mkdir -p temp/phpstan",
-			"composer require -d temp/phpstan phpstan/phpstan:0.11",
-			"composer require -d temp/phpstan phpstan/phpstan-deprecation-rules:0.11",
-			"composer require -d temp/phpstan phpstan/phpstan-strict-rules:0.11",
-			"composer require -d temp/phpstan thecodingmachine/phpstan-safe-rule:0.1.3",
-			"composer require -d temp/phpstan roave/no-floaters:1.1.0"
-		],
 		"phpstan": [
-			"temp/phpstan/vendor/bin/phpstan analyse -l max -c tests/config/phpstan.neon src tests/src tests/cases"
+			"vendor/bin/phpstan analyse -l max -c tests/config/phpstan.neon src tests/src tests/cases"
 		]
 	},
 	"extra": {
