--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
 		"issues": "https://github.com/trejjam/ares/issues"
 	},
 	"require": {
-		"php": ">=7.3",
+		"php": "^7.3 | ^8.0",
 
 		"ext-simplexml": "^7.1 | ^8.0",
 
