--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
 		"nette/http": "^3.0",
 		"nette/utils": "^3.0",
 		"guzzlehttp/guzzle": "^7.0",
-		"thecodingmachine/safe": "^1.0 || ^2.0"
+		"thecodingmachine/safe": "^1.3"
 	},
 	"require-dev": {
 		"nette/tester": "^2.2",
@@ -31,13 +31,13 @@
 		"composer/ca-bundle": "^1.1",
 		"paragonie/certainty": "^2.6",
 
-		"phpstan/phpstan": "^0.12 | ^1.1",
-		"phpstan/phpstan-deprecation-rules": "^0.12 | ^1.0",
-		"phpstan/phpstan-strict-rules": "^0.12 | ^1.0",
-		"thecodingmachine/phpstan-safe-rule": "^1.0",
-		"roave/no-floaters": "^1.4 | ^1.5",
+		"phpstan/phpstan": "^1.7",
+		"phpstan/phpstan-deprecation-rules": "^1.0",
+		"phpstan/phpstan-strict-rules": "^1.3",
+		"thecodingmachine/phpstan-safe-rule": "^1.2",
+		"roave/no-floaters": "^1.5",
 
-		"symplify/easy-coding-standard": "^9.2 || ^10.0 || ^11.0",
+		"symplify/easy-coding-standard": "^11.0",
 
 		"roave/security-advisories": "dev-master"
 	},
@@ -62,7 +62,7 @@
 	},
 	"extra": {
 		"branch-alias": {
-			"dev-master": "v0.5.x-dev"
+			"dev-master": "v0.6.x-dev"
 		}
 	}
 }
