--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
 		"nette/http": "^3.0",
 		"nette/utils": "^3.0",
 		"guzzlehttp/guzzle": "^7.0",
-		"thecodingmachine/safe": "^1.3 || ^2.0"
+		"thecodingmachine/safe": "^2.4"
 	},
 	"require-dev": {
 		"nette/tester": "^2.4",
