--- a/composer.json
+++ b/composer.json
@@ -15,29 +15,29 @@
 		}
 	],
 	"require": {
-		"php": "^7.3 | ^8.0",
+		"php": "~8.1.0",
 
-		"ext-simplexml": "^7.1 | ^8.0",
+		"ext-simplexml": "~8.1.0 | ~8.2.0",
 
 		"nette/di": "^3.0",
 		"nette/http": "^3.0",
 		"nette/utils": "^3.0",
 		"guzzlehttp/guzzle": "^7.0",
-		"thecodingmachine/safe": "^1.3 || ^2.0"
+		"thecodingmachine/safe": "^2.4"
 	},
 	"require-dev": {
 		"nette/tester": "^2.4",
 
-		"composer/ca-bundle": "^1.1",
-		"paragonie/certainty": "^2.6",
+		"composer/ca-bundle": "^1.3",
+		"paragonie/certainty": "^2.8",
 
-		"phpstan/phpstan": "^1.7",
-		"phpstan/phpstan-deprecation-rules": "^1.0",
-		"phpstan/phpstan-strict-rules": "^1.3",
+		"phpstan/phpstan": "^1.9",
+		"phpstan/phpstan-deprecation-rules": "^1.1",
+		"phpstan/phpstan-strict-rules": "^1.4",
 		"thecodingmachine/phpstan-safe-rule": "^1.2",
-		"roave/no-floaters": "^1.5",
+		"roave/no-floaters": "^1.9",
 
-		"symplify/easy-coding-standard": "^11.0",
+		"symplify/easy-coding-standard": "^11.2",
 
 		"roave/security-advisories": "dev-master"
 	},
@@ -62,7 +62,7 @@
 	},
 	"extra": {
 		"branch-alias": {
-			"dev-master": "v0.6.x-dev"
+			"dev-master": "v0.7.x-dev"
 		}
 	}
 }
