--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
 		}
 	],
 	"require": {
-		"php": "~8.1.0",
+		"php": "~8.1.0 | ~8.2.0",
 
 		"ext-simplexml": "~8.1.0 | ~8.2.0",
 
@@ -23,21 +23,21 @@
 		"nette/http": "^3.0",
 		"nette/utils": "^3.0",
 		"guzzlehttp/guzzle": "^7.0",
-		"thecodingmachine/safe": "^2.4"
+		"azjezz/psl": "^2.4.1"
 	},
 	"require-dev": {
-		"nette/tester": "^2.4",
+		"nette/tester": "^2.4.3",
 
-		"composer/ca-bundle": "^1.3",
-		"paragonie/certainty": "^2.8",
+		"composer/ca-bundle": "^1.3.5",
+		"paragonie/certainty": "^2.8.2",
 
-		"phpstan/phpstan": "^1.9",
-		"phpstan/phpstan-deprecation-rules": "^1.1",
-		"phpstan/phpstan-strict-rules": "^1.4",
-		"thecodingmachine/phpstan-safe-rule": "^1.2",
-		"roave/no-floaters": "^1.9",
+		"phpstan/phpstan": "^1.9.3",
+		"phpstan/phpstan-deprecation-rules": "^1.1.1",
+		"phpstan/phpstan-strict-rules": "^1.4.5",
+		"php-standard-library/phpstan-extension": "^1.0.0",
+		"roave/no-floaters": "^1.9.0",
 
-		"symplify/easy-coding-standard": "^11.2",
+		"symplify/easy-coding-standard": "^11.2.5",
 
 		"roave/security-advisories": "dev-master"
 	},
