--- a/composer.json
+++ b/composer.json
@@ -32,6 +32,7 @@
 		"paragonie/certainty": "^2.8.2",
 
 		"phpstan/phpstan": "^1.9.14",
+		"phpstan/extension-installer": "^1.2.0",
 		"phpstan/phpstan-deprecation-rules": "^1.1.1",
 		"phpstan/phpstan-strict-rules": "^1.4.5",
 		"php-standard-library/phpstan-extension": "^1.0.0",
@@ -58,7 +59,10 @@
 	"minimum-stability": "dev",
 	"prefer-stable": true,
 	"config": {
-		"sort-packages": true
+		"sort-packages": true,
+		"allow-plugins": {
+			"phpstan/extension-installer": true
+		}
 	},
 	"extra": {
 		"branch-alias": {
