--- a/composer.json
+++ b/composer.json
@@ -22,8 +22,7 @@
 		"nette/di": "^3.0",
 		"nette/http": "^3.0",
 		"nette/utils": "^3.0",
-		"guzzlehttp/guzzle": "^7.0",
-		"azjezz/psl": "^2.4.1"
+		"guzzlehttp/guzzle": "^7.0"
 	},
 	"require-dev": {
 		"nette/tester": "^2.4.3",
@@ -35,7 +34,6 @@
 		"phpstan/extension-installer": "^1.2.0",
 		"phpstan/phpstan-deprecation-rules": "^1.1.1",
 		"phpstan/phpstan-strict-rules": "^1.4.5",
-		"php-standard-library/phpstan-extension": "^1.0.0",
 		"roave/no-floaters": "^1.9.0",
 
 		"symplify/easy-coding-standard": "^11.2.5",
